--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           <div class="row">
             <div class="page-header">
             
-            <h1>Morning Keynote: <font color="red">Lifesaving Capsule Robots</font></h1>
+            <h1>Morning Keynote: <a href="">Lifesaving Capsule Robots</a></h1>
 <b><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php"><br />
 Pietro Valdastri</a>, Vanderbilt University, USA</b></p>
 <p><img style="float:left; margin: 10px 20px 10px 10px;" width="150" src="figs/Valdastri_Pietro.jpg">
@@ -377,7 +377,7 @@ Medical Design Technology Magazine, Medical Xpress, Newswise, NSF Science Now.</
           <div class="row">
             <div class="page-header">
             
-            <h2>Afternoon Keynote: <font color="red">Interoperability of Medical Devices in Acute Care</font></h2>
+            <h2>Afternoon Keynote: <a href="">Interoperability of Medical Devices in Acute Care</a></h2>
 <b>Stefan Schlichting</a>, Drägerwerk AG & Co. KGaA (Lübeck, Germany)</b></p>
 <p>
 
