--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <div class="row">
             <div class="page-header">
               <h1>Call for Papers</h1>
-              <p>Call for papers [<a href="MedicalCPS_2016.pdf" target="_blank">pdf</a>]</p>
+              <p>Call for papers [<a href="MedicalCPS2016.pdf" target="_blank">pdf</a>]</p>
               <p>Authors  are invited to submit papers by February 14th, 2016 (short papers 4-6 pages,  full papers 8 -10 pages) and posters by March 15th, 2016.</p>
               <p><strong>Submit your papers via EasyChair - <a href="https://easychair.org/conferences/?conf=medicalcps2016" target="_blank">https://easychair.org/conferences/?conf=medicalcps2016</a></strong></p>
               <p>Authors should prepare their papers using LaTeX and the ACM style file.  Submissions must be original and should not have been published previously or  be under consideration for publication while being evaluated for this workshop. </p>
