--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ generating more than 7,300 citations. He has also been PI/Co-PI on grants totali
                   <li><a href="http://homepages.inf.ed.ac.uk/gsanguin/">Guido Sanguinetti</a>, University of Edinburgh, UK</li>
                   <li><a href="http://www3.cs.stonybrook.edu/~sas/">Scott. A. Smolka</a>, Stony Brook University, USA</li>
                   <li><a href="http://www.cis.upenn.edu/~sokolsky/">Oleg Sokolsky</a>, University of Pennsylvania, USA</li>
-                  <li><a href="http://www.ti5.tu-harburg.de/staff/turau/">Volker Turau</a>, University of Pennsylvania, USA</li>
+                  <li><a href="http://www.ti5.tu-harburg.de/staff/turau/">Volker Turau</a>, Hamburg Universtity of Technology, Germany</li>
                   <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, Vanderbilt University, USA</li>
                   <li><a href="http://hibou.cs.wpi.edu/~kven/wordpress/">Krishna Venkatasubramanian</a>, Worcester Polytechnic Institute, USA</li>
               </ul>
