--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <!-- <li class=""><a href="#attend"><i class="icon-chevron-right"></i> Workshop Attendees -->
 </a></li>
         <!--  <li class=""><a href="#participants"><i class="icon-chevron-right"></i> Workshop Participants</a></li>-->
-          <li class=""><a href="http://mlab.github.io/medcps_workshop/2014"><i class="icon-chevron-right"></i> 2014 Workshop</a></li>
-          <li class=""><a href="http://mlab.github.io/medcps_workshop/2015"><i class="icon-chevron-right"></i> 2015 Workshop</a></li>
+          <li class=""><a href="http://mlab-upenn.github.io/medcps_workshop/2014"><i class="icon-chevron-right"></i> 2014 Workshop</a></li>
+          <li class=""><a href="http://mlab-upenn.github.io/medcps_workshop/2015"><i class="icon-chevron-right"></i> 2015 Workshop</a></li>
         </ul>
       </div> <!-- span3 -->
       
