removed Scott and Added Rahul

--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@ computer-assisted surgery.</p>
             
             <h2>Dissemination Talk: CyberCardia: Compositional, Approximate, and 
 Quantitative Reasoning for Medical Cyber-Physical Systems</h2>
-<b><a href="http://www3.cs.stonybrook.edu/~sas/">Scott A. Smolka</a></a>, Stony Brook University, (USA)</b></p>
+<b><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a></a>, Stony Brook University, (USA)</b></p>
 <p>
 
-<img style="float:left; margin: 10px 20px 10px 10px;" width="150" src="figs/Scott_Smolka.jpg">
+<img style="float:left; margin: 10px 20px 10px 10px;" width="150" src="figs/rahul.jpg">
 <p style="text-align: justify;">The CyberCardia project is part of the NSF’s initiative to advance the 
 state-of-the-art in Cyber-Physical Systems (CPS): engineered systems that are built from, and depend upon, 
 the seamless integration of computation and physical components. The goal of this project is to develop far 
@@ -432,12 +432,21 @@ nd centers CMU, RIT, UM, GTech, UPenn, FC-ESE, SBU, TUW and FDA.
 </p>
 
 <p style="text-align: justify;"><b>Short Bio</b>: 
-Scott Smolka is a Professor of Computer Science at Stony Brook University. His research interests include m
-odel checking, runtime verification, and the modeling and analysis of cardiac tissue. He is the Lead PI for the 
-newly awarded multi-institutional NSF CPS Frontiers project on CyberCardia: Compositional, Approximate, and 
-Quantitative Reasoning for Medical Cyber-Physical Systems. He is perhaps best known for the algorithm he and 
-Paris Kanellakis invented for deciding bisimulation. Smolka’s research has resulted in more than 160 publications, 
-generating more than 7,300 citations. He has also been PI/Co-PI on grants totaling more than $22M.</p>
+Rahul Mangharam is an Associate Professor in the Dept. of Electrical & Systems Engineering and Dept. of Computer 
+& Information Science at the University of Pennsylvania. He directs mLAB: Real-Time and Embedded Systems Lab and 
+xLAB: Experience Design and Technology Lab at Penn. His interests are in real-time scheduling algorithms for 
+networked embedded systems with applications in medical devices, energy efficient buildings, automotive systems 
+and industrial wireless control networks.
+
+He received his Ph.D. in Electrical & Computer Engineering from Carnegie Mellon University where he also received 
+his MS and BS in 2007, 2002 and 2000 respectively. He has worked on ASIC chip design at FORE Systems (1999) and 
+Gigabit Ethernet at Apple Computer Inc. (2000).  In 2002, he was a member of technical staff in the Ultra-Wide Band 
+Wireless Group at Intel Labs. He was an international scholar in the Wireless Systems Group at IMEC, Belgium in 2003.
+
+Rahul received the 2014 IEEE Benjamin Franklin Key Award from the IEEE Philadelphia Section, 2013 NSF CAREER Award, 
+2012 Intel Early Faculty Career Award and was selected by the National Academy of Engineering for the 2012 US 
+Frontiers of Engineering. He was the Stephen J. Angelo Term Chair Assistant Professor at the University of 
+Pennsylvania from 2008-2013. </p>
 			
 
        </div>
