--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ computer-assisted surgery.</p>
             
             <h2>Dissemination Talk: CyberCardia: Compositional, Approximate, and 
 Quantitative Reasoning for Medical Cyber-Physical Systems</h2>
-<b><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a></a>, UPenn, (USA)</b></p>
+<b><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a></a>, University of Pennsylvania, (USA)</b></p>
 <p>
 
 <img style="float:left; margin: 10px 20px 10px 10px;" width="150" src="figs/rahul.jpg">
