--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               <h1>Invited Speakers</h1>
               <ul>
                   <li><a href="http://www.draeger-msi.de/home/?L=1">Stefan Schlichting</a>, Dräger Safety MSI Gmb, Germany</li>
-                  <li><a href="http://www3.cs.stonybrook.edu/~sas/">Scott. A. Smolka</a>, Stony Brook University, USA</li>
+                  <li><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a>, University of Pennsylvania, (USA)</li>
                   <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, Vanderbilt University, USA</li>
               </ul>
             </div>
