--- a/index.html
+++ b/index.html
@@ -326,12 +326,18 @@
             <div class="page-header">
               <h1>Accepted Papers</h1>
               <ul>
-                  <li>Zhihao Jiang, Houssam Abbas, Pieter Mosterman and Rahul Mangharam. Automated Closed-Loop Model Checking of Implantable Pacemaker Using Abstraction Tree</li>
-                  <li>Chung-Ling Lin, Wuwei Shen and Richard Hawkins. Support for Safety Case Generation via Model Transformation</li>
-                  <li>Sriram Sankaranarayanan, Suhas Akshar Kumar, Faye Cameron, B Wayne Bequette, Georgios Fainekos and David Maahs. Model-Based Falsification of an Artificial Pancreas Control System</li>
-                  <li>Liang Cheng, Zhangtan Li, Yi Zhang, Yang Zhang and Insup Lee. Protecting interoperable clinical environment with authentication</li>
-                  <li>Paloma Rubio-Conde, Diego Villarán-Molina and Marisol García-Valls. Measuring performance of middleware technologies for medical systems: Ice vs AMQP</li>
-                  <li>Marisol García-Valls, Natividad Herrasti and Christophe Jouvray. Flexible and timely on-line integration of medical services using iLand middleware</li>
+                  <li>Zhihao Jiang, Houssam Abbas, Pieter Mosterman and Rahul Mangharam. <br>
+                      Automated Closed-Loop Model Checking of Implantable Pacemaker Using Abstraction Tree</li>
+                  <li>Chung-Ling Lin, Wuwei Shen and Richard Hawkins. <br>
+                      Support for Safety Case Generation via Model Transformation</li>
+                  <li>Sriram Sankaranarayanan, Suhas Akshar Kumar, Faye Cameron, B Wayne Bequette, Georgios Fainekos and David Maahs. <br>
+                      Model-Based Falsification of an Artificial Pancreas Control System</li>
+                  <li>Liang Cheng, Zhangtan Li, Yi Zhang, Yang Zhang and Insup Lee. <br>
+                      Protecting interoperable clinical environment with authentication</li>
+                  <li>Paloma Rubio-Conde, Diego Villarán-Molina and Marisol García-Valls. <br>
+                      Measuring performance of middleware technologies for medical systems: Ice vs AMQP</li>
+                  <li>Marisol García-Valls, Natividad Herrasti and Christophe Jouvray. <br>
+                      Flexible and timely on-line integration of medical services using iLand middleware</li>
               </ul>
             </div>
               </div>
