--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@
               <h1>Invited Speakers</h1>
               <ul>
                   <li><a href="http://www.draeger-msi.de/home/?L=1">Stefan Schlichting</a>, Dräger Safety MSI Gmb, Germany</li>
-                  <li><a href="http://www.juliangoldman.info/">Julian M. Goldman</a>, Massachusetts General Hospital, (USA)</li>
-                  <li><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a>, University of Pennsylvania, (USA)</li>
+                  <li><a href="http://www.juliangoldman.info/">Julian M. Goldman</a>, Massachusetts General Hospital, USA</li>
+                  <li><a href="https://www.seas.upenn.edu/~rahulm/">Rahul Mangharam</a>, University of Pennsylvania, USA</li>
                   <li><a href="http://engineering.vanderbilt.edu/me/faculty-staff/pietro-valdastri.php">Pietro Valdastri</a>, Vanderbilt University, USA</li>
               </ul>
             </div>
