--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
          
           <li class=""><a href="#invited"><i class="icon-chevron-right"></i> Invited Speakers</a></li>
           <li class=""><a href="#program"><i class="icon-chevron-right"></i> Workshop Program</a></li>
-          <li class=""><a href="#key1"><i class="icon-chevron-right"></i> Morning Keynote</a></li>
-          <li class=""><a href="#key2"><i class="icon-chevron-right"></i> Afternoon Keynote</a></li>
+          <li class=""><a href="#key1"><i class="icon-chevron-right"></i> Keynote #1</a></li>
+          <li class=""><a href="#key2"><i class="icon-chevron-right"></i> Keynote #2</a></li>
+          <li class=""><a href="#key3"><i class="icon-chevron-right"></i> Keynote #3</a></li>
           <li class=""><a href="#dissTalk"><i class="icon-chevron-right"></i>Dissemination Talk</a></li>
           
           <li class=""><a href="#chair"><i class="icon-chevron-right"></i> Organizing Committee</a></li>
