--- a/index.html
+++ b/index.html
@@ -176,11 +176,7 @@
                 <td width="10"></td>
                 <td>Submission Deadline (Papers)</td>
               </tr>
-              <tr>
-                <td>March 15th, 2016</td>
-                <td></td>
-                <td>Submission Deadline (Posters)</td>
-              </tr>
+
               <tr>
                 <td>March  1st, 2016</td>
                 <td></td>
@@ -190,6 +186,16 @@
                 <td>March  17th, 2016</td>
                 <td></td>
                 <td>Camera Submission Due</td>
+              </tr>
+            <tr>
+                <td><strike>March 15th</strike> March 17th, 2016</td>
+                <td></td>
+                <td>Submission Deadline (Posters)</td>
+              </tr>
+              <tr>
+                <td>March 18th, 2016</td>
+                <td></td>
+                <td>Early Registration</td>
               </tr>
               <tr>
                 <td>April 11th, 2016</td>
@@ -337,11 +343,11 @@
            </td>
 </tr>
 <tr>
-<td class="c7"><span class="c2">10:00-11:30</span></td>
+<td class="c7"><span class="c2">10:00-11:30</span><span class="c2">10:00-11:30</span></td>
 <td class="c9 c11"><span class="c8 c2">Coffee Break</span></td>
 </tr>
 <tr>
-<td class="c10"><span class="c2">11:30</span></td>
+<td class="c10"><span class="c2">11:30-12:30</span></td>
 <td class="c9">
               <span class="c8 c2">Session 1 &#8211; Safety and Interoperability  (Chair: TBD)</span><br style="margin-bottom:1pt;"><br />
               <span class="c2">Liang Cheng, Zhangtan Li, Yi Zhang, Yang Zhang and Insup Lee,</span><br />
