--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 <td class="c9 c11"><span class="c8 c2">Lunch Break</span></td>
 </tr>
 <tr>
-<td class="c10"><span class="c2">14:00</span></td>
+<td class="c10"><span class="c2">14:00-16:00</span></td>
 <td class="c9">
               <span class="c8 c2">Session 2 &#8211;  (Chair: Ezio Bartocci)</span><br style="margin-bottom:1pt;"><br />
               <span class="c8 c2">Keynote speech: Pietro Valdastri - Lifesaving Capsule Robots</span><br style="margin-bottom:1pt;"><br />
