--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 <td class="c9">
               <span class="c8 c2">Keynote speech (chair: Martin Leucker)</span><br style="margin-bottom:1pt;"><br />
               <span class="c2 c3 d2">Julian M. Goldman</span><br />
-              <span class="c2">The Medical Internet of Things (MIoT) to enable healthcare transformation</span>
+              <span class="c8 c2">The Medical Internet of Things (MIoT) to enable healthcare transformation</span>
            </td>
 </tr>
 <tr>
