--- a/index.html
+++ b/index.html
@@ -356,10 +356,11 @@
               <span class="c2 c3 d2">Liang Cheng, Zhangtan Li, Yi Zhang, Yang Zhang and Insup Lee,</span><br />
               <span class="c8 c2">Protecting interoperable clinical environment with authentication</span><br style="margin-bottom:1pt;"><br />
 
-              <span class="c2"> Paloma Rubio-Conde, Diego Villarán-Molina and Marisol García-Valls,</span><br />
-              <span class="c2 c3 d2">Measuring performance of middleware technologies for medical systems: Ice vs AMQP</span><br style="margin-bottom:1pt;"><br />
-              <span class="c2"> Chung-Ling Lin, Wuwei Shen and Richard Hawkins,</span><br />
-              <span class="c2 c3 d2">Support for Safety Case Generation via Model Transformation</span>
+              <span class="c2 c3 d2"> Paloma Rubio-Conde, Diego Villarán-Molina and Marisol García-Valls,</span><br />
+              <span class="c8 c2">Measuring performance of middleware technologies for medical systems: Ice vs AMQP</span><br style="margin-bottom:1pt;"><br />
+              
+              <span class="c2 c3 d2"> Chung-Ling Lin, Wuwei Shen and Richard Hawkins,</span><br />
+              <span class="c8 c2">Support for Safety Case Generation via Model Transformation</span>
            </td>
 </tr>
 <tr>
