--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 <tr class="c12">
 <td class="c10"><span class="c2">16:00</span></td>
 <td class="c9">
-              <span class="c8 c2">Session3 &#8211;  (Chair: )</span><br style="margin-bottom:1pt;"><br />
+              <span class="c8 c2">Session 3 &#8211; Verification of Medical CPS  (Chair: )</span><br style="margin-bottom:1pt;"><br />
               <span class="c8 c2"> Dissemination Talk: Rahul Mangharam - CyberCardia: Compositional, Approximate, and Quantitative Reasoning for Medical Cyber-Physical Systems</span><br style="margin-bottom:1pt;"><br />
               <span class="c2"> Zhihao Jiang, Houssam Abbas, Pieter Mosterman and Rahul Mangharam</span><br />
               <span class="c2 c3 d2">Automated Closed-Loop Model Checking of Implantable Pacemaker Using Abstraction Tree</span><br style="margin-bottom:1pt;"><br />
