--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 <td class="c9 c11"><span class="c8 c2">Coffee Break</span></td>
 </tr>
 <tr>
-<td class="c10"><span class="c2"></span><br><br><br><span class="c2">11:00-11:30</span><br><br><br><span class="c2">11:30-12:00</span></td>
+<td class="c10"><span class="c2"></span><br><br><br><span class="c2">11:00-11:30</span><br><br><br><span class="c2">11:30-12:00</span><br><br><br><span class="c2">12:00-12:30</span></td>
 <td class="c9">
               <span class="c8 c2">Session 1 &#8211; Safety and Interoperability  (Chair: TBD)</span><br style="margin-bottom:1pt;"><br />
               
