--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <span class="c2 c3 d2">Pietro Valdastri </span><br />
               <span class="c8 c2">Lifesaving Capsule Robots</span><br /><br />
               
-              <span class="c2 c3 d2"> Marisol García-Valls, Natividad Herrasti and Christophe Jouvray</span><br />
+              <span class="c2 c3 d2">Marisol García-Valls, Natividad Herrasti,  Christophe Jouvray, and Aintzane Armentia</span><br />
               <span class="c8 c2">Flexible and timely on-line integration of medical services using iLand middleware</span><br style="margin-bottom:1pt;"><br />
            </td>
 </tr>
@@ -422,8 +422,14 @@
                       Protecting interoperable clinical environment with authentication</li>
                   <li>Paloma Rubio-Conde, Diego Villarán-Molina and Marisol García-Valls. <br>
                       Measuring performance of middleware technologies for medical systems: Ice vs AMQP</li>
-                  <li>Marisol García-Valls, Natividad Herrasti and Christophe Jouvray. <br>
+                  <li>Marisol García-Valls, Natividad Herrasti,  Christophe Jouvray, and Aintzane Armentia<br>
                       Flexible and timely on-line integration of medical services using iLand middleware</li>
+              </ul>
+              
+              <h1>Accepted Posters</h1>
+              <ul>
+                  <li>Nicola Paoletti, Patanè Andrea and Marta Kwiatkowska. <br>Closed-loop quantitative verification of rate-adaptive pacemakers</li>
+                  <li>Alena Simalatsar, Monia Guidi and Thierry Buclin. <br> Cascaded PID Controller for Anaesthesia Delivery</li>
               </ul>
             </div>
               </div>
