--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 <tr>
 <td class="c10"><span class="c2"></span><br><br><br><span class="c2">11:00-11:30</span><br><br><br><span class="c2">11:30-12:00</span><br><br><br><br><span class="c2">12:00-12:30</span></td>
 <td class="c9">
-              <span class="c8 c2">Session 1 &#8211; Safety and Interoperability  (Chair: TBD)</span><br style="margin-bottom:1pt;"><br />
+              <span class="c8 c2">Session 1 &#8211; Safety and Interoperability  (Chair: Rahul Mangharam)</span><br style="margin-bottom:1pt;"><br />
               
               
               <span class="c2 c3 d2">Liang Cheng, Zhangtan Li, Yi Zhang, Yang Zhang and Insup Lee,</span><br />
@@ -385,7 +385,7 @@
 <tr class="c12">
 <td class="c10"><span class="c2"><br><br><br><span class="c2">16:00-16:30</span><br><br><br><br><br><span class="c2">16:30-17:00</span><br><br><br><br><span class="c2">17:00-17:30</span></td>
 <td class="c9">
-              <span class="c8 c2">Session 3 &#8211; Verification of Medical CPS  (Chair: TBD)</span><br style="margin-bottom:1pt;"><br />
+              <span class="c8 c2">Session 3 &#8211; Verification of Medical CPS  (Chair: Oleg Sokolsky)</span><br style="margin-bottom:1pt;"><br />
               <span class="c8 c2">Dissemination Talk</span><br style="margin-bottom:1pt;">
               <span class="c2 c3 d2">Rahul Mangharam </span><br />
               <span class="c8 c2">CyberCardia: Compositional, Approximate, and Quantitative Reasoning for Medical Cyber-Physical Systems</span><br style="margin-bottom:1pt;"><br />
